Manifests/SmartETL/Keycloak/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 3
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:21.1.1
          args: ["start", "--cache-stack=kubernetes"]
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7600
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /auth/health/ready
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
