Manifests/SmartETL/Keycloak/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
  annotations:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
  clusterIP: None
