Manifests/SmartETL/Keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2500m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 12k
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
spec:
  tls:
    - hosts:
        - cluster-k8s.ov.universe-data.ru
      secretName: cluster-k8s-ov-universe-data-ru-tls
  ingressClassName: nginx
  rules:
    - host: cluster-k8s.ov.universe-data.ru
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            path: /keycloak/(.*)
            pathType: Prefix
